@@ -23,11 +23,10 @@
 #include "sim-main.h"
 #include "devices.h"
 
-#ifdef HAVE_LINUX_MII_H
+#if defined (HAVE_LINUX_MII_H) && defined (HAVE_LINUX_TYPES_H)
 
 /* Workaround old/broken linux headers.  */
-#define _LINUX_TYPES_H
-#define __u16 unsigned short
+#include <linux/types.h>
 #include <linux/mii.h>
 
 #define REG_PHY_SIZE 0x20
